// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VHInput.vue renders default VHInput 1`] = `
<div class="Form-field Form-field--medium Form-field--light Form-field--pristine"><label for="Test Name" class="Form-label">
    Test Label
  </label> <input id="Test Name" class="Form-input">
  <p class="Form-message" style="display: none;">

  </p>
</div>
`;

exports[`VHInput.vue renders modified VHInput 1`] = `
<div class="Form-field Form-field--large Form-field--dark Form-field--dirty"><label for="Test Name" class="Form-label u-screenReaderOnly">
    Test Label
  </label> <input id="Test Name" disabled="disabled" class="Form-input Form-input--disabled">
  <p class="Form-message">
    This is a test
  </p>
</div>
`;
